* Massive revisionism: Change all files in docs/ to mention svn.pugscode.org   not svn.openfoundry.org.
git-svn-id: http://svn.pugscode.org/pugs@14673 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/docs/articles/tpr.pod
+++ b/docs/articles/tpr.pod
@@ -644,7 +644,7 @@ L<http://planet.pugscode.org/> - PlanetSix aggregates the development
 journals of leading Perl6/Pugs personnel, as well as semiweekly summaries
 of the Perl 6 mailing lists.
 
-L<http://svn.openfoundry.org/pugs/> - Subversion repository of the pugs
+L<http://svn.pugscode.org/pugs/> - Subversion repository of the pugs
 code, which you can browse with a web client. Check out the C<examples/>
 folder!
 
