--- a/docs/talks/hw2005.tex
+++ b/docs/talks/hw2005.tex
@@ -1293,7 +1293,7 @@ sublanguage into Parsec primitives.
 The source code for Pugs is freely available at:
 
 \begin{center}
-\url{http://svn.openfoundry.org/pugs/}
+\url{http://svn.pugscode.org/pugs/}
 \end{center}
 
 For more information about Pugs, please refer to the Pugs homepage at
