Slight delay as I found an editor that would not mangle the Unicode in AUTHORS
git-svn-id: http://svn.pugscode.org/pugs@14686 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/AUTHORS
+++ b/AUTHORS
@@ -92,6 +92,7 @@ Ingy dot Net                     (INGY)      Ingy döt Net / 應吉大聶
 Isaac "SyntaxNinja" Jones
 Ivan "raptor" Georgiev
 James "theorbtwo" Mastros        (JMASTROS)
+Jason "Coleoid" Cole
 Jeff Horwitz                     (JHORWITZ)
 Jens "jrieks" Rieks
 Jeremy "jvoorhis" Voorhis
