--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 10 Aug 2004
-  Last Modified: 4 Nov 2006
+  Last Modified: 15 Nov 2006
   Number: 2
-  Version: 77
+  Version: 78
 
 This document summarizes Apocalypse 2, which covers small-scale
 lexical items and typological issues.  (These Synopses also contain
@@ -952,6 +952,35 @@ The C<$#foo> notation is dead.  Use C<@foo.end> or C<@foo[-1]> instead.
 =head1 Names
 
 =over 4
+
+=item *
+
+And I<identifier> is composed of an alphabetic character followed by
+any sequence of alphanumeric characters.  The definitions of alphabetic
+and numeric include appropriate Unicode characters.  Underscore is
+always considered alphabetic.
+
+A I<name> is anything that is a legal part of a variable name (not counting
+the sigil).  This includes
+
+    $foo                # simple identifiers
+    $Foo::Bar::baz      # compound identifiers separated by ::
+    $Foo::($bar)::baz   # compound identifiers that perform interpolations
+    $42                 # numeric names
+    $!                  # certain punctuational variables
+
+Unlike in Perl 5, if a sigil is followed by comma, semicolon, colon,
+or any kind of bracket or whitespace (including Unicode brackets and
+whitespace), it will be taken to be a sigil without a name rather
+than a punctuational variable.  This allows you to use sigils as coercion
+operators:
+
+    print $( foo() )
+
+It also allows the use of bare sigils as placeholders for anonymous variables:
+
+    my ($a, $, $c) = 1..3;
+    print unless (state $)++;
 
 =item *
 
