MP6 - reorganize docs
git-svn-id: http://svn.pugscode.org/pugs@14785 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/v6-MiniPerl6/miniperl6-bootstrap-perl5.pod
+++ b/v6/v6-MiniPerl6/miniperl6-bootstrap-perl5.pod
@@ -1,3 +1,5 @@
+Bootstrapping MiniPerl6 in Perl5
+
 - Reduce the amount of nodes required to compile MP6::Grammar::Regex
 - Implement the Rul::* nodes using MP6, emit MP6 - that would amount to about 5 or 6 nodes
 
