MP6  - bootstrapped compiler generates stable code (compiled == previous) - autoquote hash keys      { a => 42 } - pair syntax sugar        { :$a }
git-svn-id: http://svn.pugscode.org/pugs@14789 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/v6-MiniPerl6/ChangeLog
+++ b/v6/v6-MiniPerl6/ChangeLog
@@ -1,3 +1,7 @@
+- autoquote hash keys      { a => 42 }
+- pair syntax sugar        { :$a }
+- deep array binding       [ $a, [ $b, $c ] ] := [ 1, [ 2, 3 ] ]
+
 0.001  2006-11-17
 - MiniPerl6::Perl5::Emitter and MiniPerl6::Emitter::Token compile ok
 
