MP6 - version 0.002 - fixed array expansion in 'for @x {...}' - type annotations   'my Int $x'
git-svn-id: http://svn.pugscode.org/pugs@14790 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/v6-MiniPerl6/ChangeLog
+++ b/v6/v6-MiniPerl6/ChangeLog
@@ -1,3 +1,8 @@
+0.002  2006-11-18
+- fixed array expansion in 'for @x {...}'
+- fixed grammar compilation in MiniPerl6::Grammar and MiniPerl6::Grammar::Regex
+
+- type annotations         my Int $x
 - autoquote hash keys      { a => 42 }
 - pair syntax sugar        { :$a }
 - deep array binding       [ $a, [ $b, $c ] ] := [ 1, [ 2, 3 ] ]
