MP6 - commented out some unused nodes in emitter
git-svn-id: http://svn.pugscode.org/pugs@14805 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/v6-MiniPerl6/ChangeLog
+++ b/v6/v6-MiniPerl6/ChangeLog
@@ -1,3 +1,5 @@
+- added Parrot emitter and 'mp6-parrot' script
+
 0.002  2006-11-18
 - fixed array expansion in 'for @x {...}'
 - fixed grammar compilation in MiniPerl6::Grammar and MiniPerl6::Grammar::Regex
