ext/Set-Relation/ : added (docs for) the generic tclose (transitive closure) unary relational operator, which takes a binary relation representing all arcs in a graph and derives a binary relation representing all paths in that graph ... useful for recursive queries like explosion-of-parts
git-svn-id: http://svn.pugscode.org/pugs@14839 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/docs/Perl6/Overview/Operator.pod
+++ b/docs/Perl6/Overview/Operator.pod
@@ -104,6 +104,7 @@ Perl6::Overview::Operator - Operators
     Generic   Num   Str
     -------------------
     =:=                   # equality (container)
+    !=:=                  # negated equality (container)
     ===                   # equality (value, eternal semantics)
     !===                  # negated equality (value, eternal semantics)
     eqv       ==    eq    # equality (value, snapshot semantics)
