Broke with nicks containing capital letters.
git-svn-id: http://svn.pugscode.org/pugs@14844 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/AUTHORS
+++ b/AUTHORS
@@ -182,6 +182,7 @@ Solomon "colomon" Foster
 Stefano Rodighiero               (LARSEN)
 Steffen "renormalist" Schwigon   (SCHWIGON)
 Stephane "cognominal" Payrard    (STEF)      Stéphane Payrard
+Stephen "tene" Weeks
 Stevan "stevan" Little           (STEVAN)
 Steve Peters                     (SMPETERS)
 Stuart "scook0" Cook
