* S06: Trivial change from ?? :: to ?? !!
git-svn-id: http://svn.pugscode.org/pugs@23635 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S06.pod
+++ b/doc/trunk/design/syn/S06.pod
@@ -2168,7 +2168,7 @@ specify tail-recursion on an anonymous block:
 
     my $anonfactorial = -> Int $n { $n < 2
     					?? 1
-					:: $n * &?BLOCK($n-1)
+					!! $n * &?BLOCK($n-1)
 				  };
 
 C<&?BLOCK.label> contains the label of the current block, if any.
