More entries in smartmatch table. Added vim modelines to help perpetuate audreyt++'s expandtabs.
git-svn-id: http://svn.pugscode.org/pugs@23641 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S01.pod
+++ b/doc/trunk/design/syn/S01.pod
@@ -161,3 +161,5 @@ Language designers are still necessary to synthesize unrelated ideas
 into a coherent whole.
 
 =back
+
+=for vim:set expandtab sw=4:
