MP6-Parrot - implemented die(); other minor fixes
git-svn-id: http://svn.pugscode.org/pugs@14876 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/v6/v6-MiniPerl6/TODO
+++ b/v6/v6-MiniPerl6/TODO
@@ -8,7 +8,9 @@ Bootstrapping MiniPerl6 in Perl5
 
 Bootstrapping MiniPerl6 in Parrot
 
-- finish OO, variables
+- finish OO, class variables
+
+- fix die() parameter handling
 
 - rewrite mp6-parrot.pl in parrot (or mp6)
 
